# sat-solver

./: .gitignore  CMakeLists.txt  clean.sh  compile.sh  run.sh  runAll.sh  team.txt
src/: Formula.cpp  Formula.h  Verifier.cpp  Verifier.h  main.cpp
src/strategies/branching/: BohmsStrategy.cpp  BohmsStrategy.h  BranchingStrategy.h  DLCSStrategy.cpp  DLCSStrategy.h  DLISStrategy.cpp  DLISStrategy.h  JeroslowWangStrategy.cpp  JeroslowWangStrategy.h  MomsStrategy.cpp  MomsStrategy.h  VSIDSStrategy.cpp  VSIDSStrategy.h
src/utils/: types.h
